--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,37 @@
 {
     "name": "iamfarhad/laravel-rabbitmq",
     "description": "RabbitMQ driver for Laravel Queue with advanced message queuing capabilities",
-    "keywords": ["laravel", "rabbitmq", "queue", "amqp", "message-queue"],
+    "keywords": [
+        "laravel",
+        "queue",
+        "rabbitmq",
+        "amqp",
+        "message-queue",
+        "php"
+    ],
     "license": "MIT",
     "type": "library",
     "authors": [
         {
-            "name": "Farhad Farahani",
-            "email": "iamfarhad@gmail.com"
+            "name": "Farhad Sakhaei",
+            "email": "iamfarhad.dev@gmail.com"
         }
     ],
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^10.0|^11.0|^12.0",
-        "php-amqplib/php-amqplib": "^3.2"
+        "ext-pcntl": "*",
+        "illuminate/queue": "^11.0|^12.0",
+        "illuminate/support": "^11.0|^12.0",
+        "php-amqplib/php-amqplib": "^v3.7.3"
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0|^9.0|^10.0",
-        "phpunit/phpunit": "^10.0|^11.0",
-        "mockery/mockery": "^1.6.0",
-        "phpstan/phpstan": "^1.10",
-        "laravel/pint": "^1.0"
+        "ext-json": "*",
+        "dg/bypass-finals": "dev-master",
+        "mockery/mockery": "^1.7.0",
+        "orchestra/testbench": "^9.0|^10.1",
+        "phpunit/phpunit": "^10.0|^11.5.14",
+        "rector/rector": "^0.15.25",
+        "squizlabs/php_codesniffer": "^3.12"
     },
     "autoload": {
         "psr-4": {
@@ -32,23 +43,26 @@
             "iamfarhad\\LaravelRabbitMQ\\Tests\\": "tests/"
         }
     },
+    "scripts": {
+        "test": "vendor/bin/phpunit",
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "format": "vendor/bin/phpcbf --standard=PSR12 src tests",
+        "analyse": "vendor/bin/phpstan analyse",
+        "rector": "vendor/bin/rector process --dry-run",
+        "rector-fix": "vendor/bin/rector process"
+    },
+    "config": {
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
+    },
     "extra": {
         "laravel": {
             "providers": [
                 "iamfarhad\\LaravelRabbitMQ\\LaravelRabbitQueueServiceProvider"
             ]
         }
-    },
-    "scripts": {
-        "test": "phpunit",
-        "test-coverage": "phpunit --coverage-html coverage",
-        "format": "pint",
-        "analyse": "phpstan analyse"
-    },
-    "config": {
-        "sort-packages": true,
-        "preferred-install": "dist",
-        "optimize-autoloader": true
     },
     "minimum-stability": "stable",
     "prefer-stable": true
