--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,24 +26,24 @@ jobs:
           --health-retries 5
 
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
-        php: [8.2, 8.3]
-        laravel: [11.*, 12.*]
-        stability: [prefer-lowest, prefer-stable]
-        include:
-          - laravel: 11.*
-            testbench: ^9.0
-            carbon: ^2.63|^3.0
-          - laravel: 12.*
-            testbench: ^10.1
-            carbon: ^2.63|^3.0
+        php: [ 8.1, 8.2, 8.3, 8.4 ]
+        laravel: [ 10.*, 11.*, 12.* ]
         exclude:
+          - php: 8.1
+            laravel: 11.*
+          - php: 8.1
+            laravel: 12.*
+        include:
           - laravel: 12.*
-            php: 8.2
-            stability: prefer-lowest
+            testbench: 10.*
+          - laravel: 11.*
+            testbench: 9.*
+          - laravel: 10.*
+            testbench: 8.*
 
-    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }}
+    name: PHP${{ matrix.php }} - Laravel${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
     steps:
       - name: Checkout code
