--- a/composer.json
+++ b/composer.json
@@ -20,16 +20,16 @@
     "require": {
         "php": "^8.2",
         "ext-pcntl": "*",
-        "illuminate/queue": "^11.0|^12.0",
-        "illuminate/support": "^11.0|^12.0",
+        "illuminate/queue": "^10.0|^11.0|^12.0",
+        "illuminate/support": "^10.0|^11.0|^12.0",
         "php-amqplib/php-amqplib": "^v3.7.3"
     },
     "require-dev": {
         "ext-json": "*",
         "dg/bypass-finals": "dev-master",
-        "mockery/mockery": "^1.7.0",
-        "orchestra/testbench": "^9.0|^10.1",
-        "phpunit/phpunit": "^10.0|^11.5.14",
+        "mockery/mockery": "^1.0",
+        "orchestra/testbench": "^9.0|^10.0",
+        "phpunit/phpunit": "^10.0|^11.0",
         "rector/rector": "^0.15.25",
         "squizlabs/php_codesniffer": "^3.12"
     },
