--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,15 @@
     "type": "library",
     "authors": [
         {
-            "name": "Farhad Sakhaei",
-            "email": "iamfarhad.dev@gmail.com"
+            "name": "Farhad zand",
+            "email": "farhad.pd@gmail.com"
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "ext-pcntl": "*",
-        "illuminate/queue": "^10.0|^11.0|^12.0",
-        "illuminate/support": "^10.0|^11.0|^12.0",
+        "illuminate/queue": "^11.0|^12.0",
+        "illuminate/support": "^11.0|^12.0",
         "php-amqplib/php-amqplib": "^v3.7.3"
     },
     "require-dev": {
