--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,13 +28,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [ 8.1, 8.2, 8.3, 8.4 ]
-        laravel: [ 10.*, 11.*, 12.* ]
-        exclude:
-          - php: 8.1
-            laravel: 11.*
-          - php: 8.1
-            laravel: 12.*
+        php: [ 8.2, 8.3, 8.4 ]
+        laravel: [11.*, 12.* ]
         include:
           - laravel: 12.*
             testbench: 10.*
