--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,32 +1,28 @@
-name: run-tests
+name: Tests
 
 on:
   push:
-    branches:
-      - '*'
+    branches: [ main, develop ]
   pull_request:
-    branches:
-      - '*'
+    branches: [ main, develop ]
 
 jobs:
-  run-tests:
+  test:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-    env:
-      COMPOSER_NO_INTERACTION: 1
-      XDEBUG_MODE: coverage
+    
     strategy:
       fail-fast: false
       matrix:
-        php: [ 8.2, 8.3, 8.4 ]
-        laravel: [ 11.*, 12.* ]
+        php: [8.2, 8.3]
+        laravel: [11.*, 12.*]
+        dependency-version: [prefer-lowest, prefer-stable]
         include:
-          - laravel: 12.*
-            testbench: 10.*
           - laravel: 11.*
-            testbench: 9.*
+            testbench: ^9.0
+          - laravel: 12.*
+            testbench: ^10.0
 
-    name: PHP${{ matrix.php }} - Laravel${{ matrix.laravel }}
+    name: PHP${{ matrix.php }} - Laravel${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
     services:
       rabbitmq:
@@ -34,44 +30,50 @@ jobs:
         env:
           RABBITMQ_DEFAULT_USER: laravel
           RABBITMQ_DEFAULT_PASS: secret
-          RABBITMQ_DEFAULT_VHOST: laravel-rabbitmq
+          RABBITMQ_DEFAULT_VHOST: b2b-field
         ports:
           - 5672:5672
           - 15672:15672
         options: >-
-          --health-cmd "rabbitmqctl node_health_check"
-          --health-interval 30s
-          --health-timeout 10s
+          --health-cmd "rabbitmq-diagnostics -q ping"
+          --health-interval 10s
+          --health-timeout 5s
           --health-retries 5
-          --health-start-period 30s
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Setup PHP
-        uses: shivammathur/setup-php@master
+        uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, amqp
           coverage: xdebug
 
+      - name: Setup problem matchers
+        run: |
+          echo "::add-matcher::${{ runner.tool_cache }}/php.json"
+          echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
+
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" --no-update
-          composer require "orchestra/testbench:${{ matrix.testbench }}" --dev --no-update
-          composer update --prefer-dist --no-suggest
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
+          composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
 
-      - name: Wait for RabbitMQ to be ready
+      - name: Wait for RabbitMQ
         run: |
-          timeout 60s bash -c 'until docker exec $(docker ps -q --filter ancestor=rabbitmq:3-management) rabbitmqctl status; do sleep 2; done'
+          timeout 60 bash -c 'until curl -f http://localhost:15672/api/overview -u laravel:secret; do sleep 2; done'
+
+      - name: List installed packages
+        run: composer show -D
 
       - name: Execute tests
-        env:
-          RABBITMQ_HOST: 127.0.0.1
-          RABBITMQ_PORT: 5672
-          RABBITMQ_USER: laravel
-          RABBITMQ_PASSWORD: secret
-          RABBITMQ_VHOST: laravel-rabbitmq
-        run: |
-          vendor/bin/pest --coverage-clover=coverage.clover
+        run: vendor/bin/pest --coverage-clover=coverage.clover
+
+      - name: Upload coverage reports to Codecov
+        if: matrix.php == '8.3' && matrix.laravel == '12.*' && matrix.dependency-version == 'prefer-stable'
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage.clover
+          fail_ci_if_error: false
