--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -49,4 +49,4 @@ jobs:
         run: composer install --prefer-dist --no-interaction --no-progress
 
       - name: Run PHPStan
-        run: vendor/bin/phpstan analyse --memory-limit=2G
+        run: vendor/bin/phpstan analyse --memory-limit=2G --no-progress
