--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "dg/bypass-finals": "dev-master",
         "laravel/pint": "^1.13",
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^9.0|^10.0",
+        "orchestra/testbench": "^9.0|^10.0|^11.0",
         "pestphp/pest": "^3.0",
         "pestphp/pest-plugin-laravel": "^3.0",
         "phpstan/phpstan": "^1.10"
